legacy/cluster/firefly/firefly.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly
  labels:
    app: firefly
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firefly
  template:
    metadata:
      labels:
        app: firefly
    spec:
      containers:
        - name: firefly
          image: docker.io/fireflyiii/core:latest@sha256:8391c11f3260354a1feb48d1cf2cb822ad00db311efe2b21eccd7d5ee6bfe60a
          resources:
            requests:
              cpu: 150m
              memory: 200Mi
            limits:
              cpu: 150m
              memory: 200Mi
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: file-upload
              mountPath: /var/www/html/storage/upload
            - name: htaccess
              mountPath: /var/www/html/.htaccess
              subPath: htaccess
      volumes:
        - name: file-upload
          persistentVolumeClaim:
            claimName: firefly-uploads
        - name: htaccess
          configMap:
            name: firefly-htaccess
            items:
              - key: htaccess
                path: htaccess
---
apiVersion: v1
kind: Service
metadata:
  name: firefly
spec:
  selector:
    app: firefly
  ports:
    - protocol: TCP
      port: 8080
